--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
