--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Pesquisa"></activity>
+        <activity android:name=".Mascara"></activity>
+        <activity android:name=".Pesquisa" />
         <activity android:name=".RecuperarSenha" />
         <activity android:name=".Principal" />
         <activity android:name=".LoginCadastrar" />
